# localops-assistant

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  middleware.py
app/api/routes/: chat.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/providers/: ollama_provider.py
app/schemas/: chat.py
app/services/: chat_service.py
docs/: AI_STEVE_VISION.md  HOMELAB_ALIGNMENT.md  HOMELAB_MASTERPLAN_SYNC.md  PRODUCT_VISION.md
tests/: conftest.py
tests/integration/: test_chat_routes.py
tests/unit/: test_chat_service.py  test_ollama_provider.py
