[project]
name = "aisteve"
version = "0.1.0"
description = "AISteve — Local AI Homelab Assistant (Jarvis-inspired)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cickks" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"
